# tokohub

./: .envrc.example  .gitignore  app.py  config.py  dependencies.py  justfile  middleware.py  pyinstaller.spec  pyproject.toml
.github/workflows/: build.yml
models/: receipt.py  settings.py
profiles/: application.yml
routers/: auth.py  foc.py  health.py  pages.py  price_change.py  purchase_order.py  receipt.py  sales.py  settings.py  stock.py
schema/: stock_alias.sql
schema/tokohub/: app_settings.sql  auth.sql  faktur_pembelian_snapshots.sql  openai_config.sql  perubahan_harga_snapshots.sql  pesanan_pembelian.sql  po_snapshots.sql  role_permissions.sql  stock_alias.sql
services/: alias_service.py  app_settings.py  auth.py  csv_import.py  db.py  encryption.py  fp_service.py  lan_auth.py  llm.py  ocr.py  po_service.py  price_change_service.py  schema.py  snapshot_service.py  ssl.py  stock_restore.py  stock_search.py
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
static/css/: style.css
static/js/: app.js  foc_history.js  fp_edit.js  po_edit.js  price_change.js  sales_history.js  scanner.js
templates/: aliases.html  base.html  foc_history.html  history.html  home.html  laporan.html  login.html  pesanan_pembelian.html  pesanan_pembelian_input.html  price_change.html  price_change_history.html  price_change_report.html  receipt_form.html  sales_history.html  scanner.html  settings.html  setup.html  users.html
