[project]
name = "stock-entry-myposse"
version = "0.1.0"
description = "Stock receipt entry app with fuzzy matching for MyPosse POS"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "mysql-connector-python>=8.0",
    "rapidfuzz>=3.0",
    "openpyxl>=3.1",
    "openai>=1.0",
    "Pillow>=10.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "cryptography>=46.0.5",
    "zeroconf>=0.148.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
]

[project.scripts]
serve = "app:main"
