[project]
name = "tokohub"
version = "0.1.0"
description = "TokoHub — stock receipt entry app with fuzzy matching"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "aiomysql>=0.2",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "rapidfuzz>=3.0",
    "openpyxl>=3.1",
    "openai>=1.0",
    "Pillow>=10.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "cryptography>=46.0.5",
    "zeroconf>=0.148.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
]

[project.scripts]
serve = "app:main"
